fixed wrapping of code issue

--- a/src/client/invite/Invite.less
+++ b/src/client/invite/Invite.less
@@ -62,6 +62,7 @@
       position: relative;
       margin-left: 1rem;
       cursor: pointer;
+      white-space: nowrap;
 
       &:hover {
         opacity: 0.8;
